change the url params to query params
