# server/cmd/cchat/main.go
@@ -81,7 +81,7 @@ func main() {
 	router.With(jwtcheck.JWTCheck).Route("/cchat/user", func(r chi.Router) {
 		r.Get("/myprofile", userHandler.MyProfile(context.Background()))
 		r.Get("/profile/{username}", userHandler.Profile(context.Background()))
-		r.Get("/list-profiles/{username}/{cursor}/{limit}", userHandler.ListProfiles(context.Background()))
+		r.Get("/list-profiles", userHandler.ListProfiles(context.Background()))
 		r.Patch("/update", userHandler.UpdateInfo(context.Background()))
 	})
 
